# SafeHaven_v2

./: SAFEHAVEN_ARCHITECTURE_V2.md
frigate_orangepi_jammy/: README.md
frigate_orangepi_jammy/assets/: metis.py
frigate_orangepi_jammy/config/: config.yml
frigate_orangepi_jammy/scripts/: check_remote.sh  deploy_and_start.sh  install_remote.sh
safehaven_local/: .env.example  LICENSE  Makefile  README.md  docker-compose.yml
safehaven_local/docs/: ARCHITECTURE_V2.md  FINAL_SUBMISSION_GUIDE.md  MACBOOK_RUNBOOK.md
safehaven_local/frigate-metis-plugin/: example_config.yml
safehaven_local/metis-detector/: README.md  app.py
safehaven_local/modeling/: README.md  calibrate_roi.py  diagnose_detector_classes.py  evaluate_state_classifier.py  infer_rtsp_state.py  prepare_latch_from_yolo.py  stream_infer_view.py  suggest_focus_roi.py  train_state_classifier.py
safehaven_local/safehaven-core/: Dockerfile  README.md  pyproject.toml
safehaven_local/safehaven-core/config/: safehaven.yml
safehaven_local/safehaven-core/scripts/: generate_demo_video.py  mock_frigate_server.py
safehaven_local/safehaven-core/src/safehaven_core/: config.py  frigate_api.py  main.py  rtsp_sampler.py
safehaven_v2/: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
safehaven_v2/docs/: ARCHITECTURE_V2.md
safehaven_v2/frigate-metis-plugin/: README.md  example_config.yml  metis_http.py
safehaven_v2/metis-detector/: Dockerfile  README.md  app.py  requirements.txt
safehaven_v2/safehaven-core/: Dockerfile  README.md
(+28 files in other folders)
